--- a/index_final.html
+++ b/index_final.html
@@ -30,6 +30,9 @@
         <p>På Copain Bageri är alla kompisar med alla! Följ oss på Instagram @copainbageri</p>
     </section>
 
+    <!-- Divider -->
+    <hr class="section-divider">
+
     <!-- Sortiment sektion -->
     <section id="sortiment" class="zigzag-section">
         <div class="zigzag-img">
@@ -49,6 +52,9 @@
             </div>
         </div>
     </section>
+
+    <!-- Divider -->
+    <hr class="section-divider">
 
     <!-- Förbeställ sektion -->
     <section id="forbestall" class="zigzag-section reverse">
