--- a/index_final.html
+++ b/index_final.html
@@ -17,7 +17,7 @@
         <nav>
             <a href="#om-oss">Om oss</a>
             <a href="#sortiment">Sortiment</a>
-            <a href="#forbestall">Förbeställ</a>
+            <a href="#instagram">Instagram</a>
         </nav>
     </header>
 
@@ -70,16 +70,10 @@
     </section>
 
     <!-- Instagram sektion -->
-    <section id="instagram" class="zigzag-section reverse">
-        <div class="zigzag-img">
-            <div class="placeholder-img">
-                Senaste från Instagram
-            </div>
-        </div>
-        <div class="zigzag-text">
+    <section id="instagram" class="instagram-section">
+        <div class="instagram-content">
             <h2>Instagram</h2>
             <p>Följ oss på <a href="https://www.instagram.com/copainbageri/" target="_blank">@copainbageri</a> för de senaste nyheterna och bilderna!</p>
-            <!-- Instagram feed embed (SnapWidget example) -->
             <div style="margin-top:1em;">
                 <iframe src="https://snapwidget.com/embed/1053247" 
                     title="Instagram Feed" 
