--- a/index_final.html
+++ b/index_final.html
@@ -6,7 +6,7 @@
     <title>Copain Bageri</title>
     <link rel="stylesheet" href="https://use.typekit.net/asf7weq.css">
     <link rel="stylesheet" href="style_p22_final.css">
-    <link rel="icon" href="logo_green_clove_small.png" type="image/png">
+    <link rel="icon" href="header_logo.png" type="image/png">
 </head>
 <body>
     <!-- Header med logotype och meny -->
@@ -68,6 +68,9 @@
             <p>Förbeställningsformuläret är tillfälligt borttaget. Kontakta oss gärna direkt via Instagram eller telefon för beställningar!</p>
         </div>
     </section>
+
+    <!-- Divider -->
+    <hr class="section-divider">
 
     <!-- Instagram sektion -->
     <section id="instagram" class="instagram-section">
