--- a/index_final.html
+++ b/index_final.html
@@ -6,13 +6,13 @@
     <title>Copain Bageri</title>
     <link rel="stylesheet" href="https://use.typekit.net/asf7weq.css">
     <link rel="stylesheet" href="style_p22_final.css">
-    <link rel="icon" href="header_logo.png" type="image/png">
+    <link rel="icon" href="logo_green_clove_small.png" type="image/png">
 </head>
 <body>
     <!-- Header med logotype och meny -->
     <header class="header">
         <div class="logo">
-            <img src="Logo_White_Transparent.PNG" alt="Copain Bageri Logotyp" class="header-logo">
+            <img src="header_logo.PNG" alt="Copain Bageri Logotyp" class="header-logo">
         </div>
         <nav>
             <a href="#om-oss">Om oss</a>
