--- a/index_final.html
+++ b/index_final.html
@@ -17,6 +17,7 @@
         <nav>
             <a href="#om-oss">Om oss</a>
             <a href="#sortiment">Sortiment</a>
+            <a href="#förbeställ">Förbeställ</a>
             <a href="#instagram">Instagram</a>
         </nav>
     </header>
