--- a/index_final.html
+++ b/index_final.html
@@ -15,10 +15,9 @@
             <img src="header_logo.PNG" alt="Copain Bageri Logotyp" class="header-logo">
         </div>
         <nav>
-            <a href="#om-oss">Om oss</a>
+            <a href="#om-copain">Om Copain</a>
             <a href="#sortiment">Sortiment</a>
             <a href="#forbestall">Förbeställ</a>
-            <a href="#instagram">Instagram</a>
         </nav>
     </header>
 
@@ -26,7 +25,7 @@
     <section class="hero-picture"></section>
 
     <!-- Om oss sektion -->
-    <section id="om-oss" class="section about-section">
+    <section id="om-copain" class="section about-section">
         <h2>Om oss</h2>
         <p>På Copain Bageri är alla kompisar med alla! Följ oss på Instagram @copainbageri</p>
     </section>
