--- a/index_final.html
+++ b/index_final.html
@@ -15,7 +15,7 @@
             <img src="header_logo.PNG" alt="Copain Bageri Logotyp" class="header-logo">
         </div>
         <nav>
-            <a href="#om-copain">Om Copain</a>
+            <a href="#copain">Copain</a>
             <a href="#sortiment">Sortiment</a>
             <a href="#forbestall">Förbeställ</a>
         </nav>
@@ -25,8 +25,8 @@
     <section class="hero-picture"></section>
 
     <!-- Om oss sektion -->
-    <section id="om-copain" class="section about-section">
-        <h2>Om oss</h2>
+    <section id="copain" class="section about-section">
+        <h2>Copain</h2>
         <p>På Copain Bageri är alla kompisar med alla! Följ oss på Instagram @copainbageri</p>
     </section>
 
