--- a/index_final.html
+++ b/index_final.html
@@ -22,7 +22,9 @@
     </header>
 
     <!-- Hero bild -->
-    <section class="hero-picture"></section>
+    <section class="hero-picture">
+        <img src="krea_hero.png" alt="Copain Bageri Hero" class="hero-img">
+    </section>
 
     <!-- Om oss sektion -->
     <section id="copain" class="section about-section">
