--- a/index_final.html
+++ b/index_final.html
@@ -38,14 +38,11 @@
     <!-- Sortiment sektion -->
     <section id="sortiment" class="zigzag-section">
         <div class="zigzag-img">
-            <div class="placeholder-img">
-                Vårt färska sortiment
-            </div>
+            <img src="krea_sortiment.png" alt="Vårt färska sortiment" />
         </div>
         <div class="zigzag-text">
             <h2>Sortiment</h2>
             <p>Vårt dagsfärska sortiment inkluderar allt från klassiska surdegsbröd och rågbröd till söta godsaker som kanelbullar och croissanter.</p>
-            
             <div class="inline-style-1">
                 <strong>Specialiteter:</strong><br>
                 • Surdegsbröd och frallor<br>
