--- a/index_final.html
+++ b/index_final.html
@@ -64,7 +64,7 @@
         </div>
         <div class="zigzag-text">
             <h2>Förbeställ</h2>
-            <p>Förbeställningsformuläret är tillfälligt borttaget. Kontakta oss gärna direkt via Instagram eller telefon för beställningar!</p>
+            <p>Vi tar gärna emot förbeställningar! Kontakta oss via <a href="https://www.instagram.com/copainbageri/" target="_blank">Instagram</a> eller på <a href="mailto:bageriet@copain.se">bageriet@copain.se</a> så löser vi det.</p>
         </div>
     </section>
 
@@ -102,7 +102,9 @@
             </div>
             <div class="contact-item">
                 <h4>Instagram</h4>
-                <p>@copainbageri</p>
+                <p>
+                    <a href="https://www.instagram.com/copainbageri/" target="_blank">@copainbageri</a>
+                </p>
             </div>
         </div>
         <div class="footer-logo-large">
