--- a/index_final.html
+++ b/index_final.html
@@ -58,9 +58,7 @@
     <!-- Förbeställ sektion -->
     <section id="forbestall" class="zigzag-section reverse">
         <div class="zigzag-img">
-            <div class="placeholder-img">
-                Förbeställ dina favoriter
-            </div>
+            <img src="notepad.png" alt="Förbeställ dina favoriter" />
         </div>
         <div class="zigzag-text">
             <h2>Förbeställ</h2>
