--- a/index_final.html
+++ b/index_final.html
@@ -12,7 +12,7 @@
     <!-- Header med logotype och meny -->
     <header class="header">
         <div class="logo">
-            <img src="header_logo.PNG" alt="Copain Bageri Logotyp" class="header-logo">
+            <img src="logo_transparent.PNG" alt="Copain Bageri Logotyp" class="header-logo">
         </div>
         <nav>
             <a href="#copain">Copain</a>
