--- a/index_final.html
+++ b/index_final.html
@@ -15,7 +15,7 @@
             <img src="logo_transparent.PNG" alt="Copain Bageri Logotyp" class="header-logo">
         </div>
         <nav>
-            <a href="#copain">Copain</a>
+            <a href="#bageriet">Bageriet</a>
             <a href="#sortiment">Sortiment</a>
             <a href="#forbestall">Förbeställ</a>
         </nav>
@@ -27,9 +27,11 @@
     </section>
 
     <!-- Om oss sektion -->
-    <section id="copain" class="section about-section">
-        <h2>Copain</h2>
-        <p>På Copain Bageri är alla kompisar med alla! Följ oss på Instagram @copainbageri</p>
+    <section id="bageriet" class="section about-section">
+        <h2>Copain Bageri</h2>
+        <p>Copain Bageri är ett litet hantverksbageri vid Sankt Sigfrids plan i hjärtat av Örgryte. .
+            <br><br>Vår passion är att baka med kärlek och noggrant utvalda råvaror. Vi använder oss av ekologiskt mjöl och bakar alla våra bröd med surdeg för att skapa bröd som är både smakrika och hälsosamma.
+        </p>
     </section>
 
     <!-- Divider -->
