--- a/index_final.html
+++ b/index_final.html
@@ -31,7 +31,7 @@
         <h2>Copain Bageri</h2>
         <p>Copain Bageri är ett litet hantverksbageri vid Sankt Sigfrids plan i hjärtat av Örgryte.
             <br><br>Vår passion är att baka med kärlek och noggrant utvalda råvaror. Vi använder oss av ekologiskt mjöl och bakar alla våra bröd med surdeg för att skapa bröd som är både smakrika och hälsosamma.
-            <br><br>Vår butik är öppen på fredagar och lördagar hos våra kompisar <a href="https://www.instagram.com/grytetgbg/" target="_blank">Grytet på Bögatan 1. Vi tar även beställningar - se längre ner på sidan.
+            <br><br>Vår butik är öppen på fredagar och lördagar hos våra kompisar <a href="https://www.instagram.com/grytetgbg/" target="_blank">Grytet</a> på Bögatan 1. Vi tar även beställningar - se <a href="https://https://copain-bageri.netlify.app/index_final.html#forbestall" target="_blank">längre ner</a> på sidan.
         </p>
     </section>
 
