--- a/index_final.html
+++ b/index_final.html
@@ -71,7 +71,7 @@
     <!-- Divider -->
     <hr class="section-divider">
 
-    <!-- Instagram sektion -->
+    <!-- Instagram sektion 
     <section id="instagram" class="instagram-section">
         <div class="instagram-content">
             <h2>Instagram</h2>
@@ -88,7 +88,7 @@
             </div>
         </div>
     </section>
-
+    -->
     <!-- Footer -->
     <footer>
         <div class="contact-info">
