--- a/index_final.html
+++ b/index_final.html
@@ -68,9 +68,9 @@
         </div>
     </section>
 
-    <!-- Divider -->
+    <!-- Divider
     <hr class="section-divider">
-
+    -->
     <!-- Instagram sektion 
     <section id="instagram" class="instagram-section">
         <div class="instagram-content">
