--- a/index_final.html
+++ b/index_final.html
@@ -23,7 +23,7 @@
 
     <!-- Hero bild -->
     <section class="hero-picture">
-        <img src="krea_hero.png" alt="Copain Bageri Hero" class="hero-img">
+        <img src="surdegsbröd.jpg" alt="Copain Bageri Hero" class="hero-img">
     </section>
 
     <!-- Om oss sektion -->
@@ -40,7 +40,7 @@
     <!-- Sortiment sektion -->
     <section id="sortiment" class="zigzag-section">
         <div class="zigzag-img">
-            <img src="krea_sortiment.png" alt="Vårt färska sortiment" />
+            <img src="pastries.jpg" alt="Vårt färska sortiment" />
         </div>
         <div class="zigzag-text">
             <h2>Sortiment</h2>
@@ -60,7 +60,7 @@
     <!-- Förbeställ sektion -->
     <section id="forbestall" class="zigzag-section reverse">
         <div class="zigzag-img">
-            <img src="notepad.png" alt="Förbeställ dina favoriter" />
+            <img src="paketering.jpg" alt="Förbeställ dina favoriter" />
         </div>
         <div class="zigzag-text">
             <h2>Förbeställ</h2>
