--- a/index_final.html
+++ b/index_final.html
@@ -23,7 +23,7 @@
 
     <!-- Hero bild -->
     <section class="hero-picture">
-        <img src="surdegsbröd.jpg" alt="Copain Bageri Hero" class="hero-img">
+        <img src="surdegsbrod.jpg" alt="Copain Bageri Hero" class="hero-img">
     </section>
 
     <!-- Om oss sektion -->
