--- a/index_final.html
+++ b/index_final.html
@@ -29,8 +29,9 @@
     <!-- Om oss sektion -->
     <section id="bageriet" class="section about-section">
         <h2>Copain Bageri</h2>
-        <p>Copain Bageri är ett litet hantverksbageri på Sankt Sigfrids Plan i hjärtat av Örgryte. Vår butik är öppen på fredagar och lördagar hos våra kompisar <a href="https://www.instagram.com/grytetgbg/" target="_blank">Grytet</a>  på Bögatan 1. Vi tar även beställningar - se <a href="#forbestall">längre ner</a> på sidan.
+        <p>Copain Bageri är ett litet hantverksbageri på Sankt Sigfrids Plan i hjärtat av Örgryte. Vår butik är öppen på lördagar hos våra kompisar <a href="https://www.instagram.com/grytetgbg/" target="_blank">Grytet</a>  på Bögatan 1. Vi tar även beställningar - se <a href="#forbestall">längre ner</a> på sidan.
             <br><br>Vår passion är att baka med kärlek och noggrant utvalda råvaror. Vi använder oss av ekologiskt mjöl och bakar alla våra bröd med surdeg för att skapa bröd som är både smakrika och hälsosamma.
+            <br><br>Bilderna på vår hemsida är tagna av en annan kompis till oss, <a href="https://www.instagram.com/joakimblomquistphotography/" target="_blank">Joakim Blomquist</a>. Stort tack för att du fångar vårt bageri så fint!
         </p>
     </section>
 
