--- a/index_final.html
+++ b/index_final.html
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div class="footer-logo-large">
-            <img src="logo_green_clove.png" alt="Copain Bageri Logotyp" class="footer-logo-large">
+            <img src="logo_footer.png" alt="Copain Bageri Footer Logotyp" class="footer-logo-large">
         </div>
     </footer>
 </body>
