--- a/index_final.html
+++ b/index_final.html
@@ -29,9 +29,9 @@
     <!-- Om oss sektion -->
     <section id="bageriet" class="section about-section">
         <h2>Copain Bageri</h2>
-        <p>Copain Bageri är ett litet hantverksbageri på Sankt Sigfrids Plan i hjärtat av Örgryte. Vår butik är öppen på lördagar hos våra kompisar <a href="https://www.instagram.com/grytetgbg/" target="_blank">Grytet</a>  på Bögatan 1. Vi tar även beställningar - se <a href="#forbestall">längre ner</a> på sidan.
-            <br><br>Vår passion är att baka med kärlek och noggrant utvalda råvaror. Vi använder oss av ekologiskt mjöl och bakar alla våra bröd med surdeg för att skapa bröd som är både smakrika och hälsosamma.
-            <br><br>Bilderna på vår hemsida är tagna av en annan kompis till oss, <a href="https://www.instagram.com/joakimblomquistphotography/" target="_blank">Joakim Blomquist</a>. Stort tack för att du fångar vårt bageri så fint!
+        <p>Vi är Copain Bageri – ett litet bageri med stort hjärta, mitt vid Sankt Sigfrids Plan i Örgryte. På helgerna hittar du oss hos våra kompisar på <a href="https://www.instagram.com/grytetgbg/" target="_blank">Grytet</a>  på Bögatan 1, där vi säljer våra bröd och bakverk. Vill du beställa? Det går fint – du hittar mer information <a href="#forbestall">längre ner</a> på sidan.
+            <br><br>Vi bakar allt med omsorg, tid och riktigt bra råvaror. Vårt mjöl är ekologiskt och våra bröd jäser med surdeg, precis som vi tycker att bröd ska få göra – långsamt och naturligt.
+            <br><br>Bilderna här på sidan har vår kompis <a href="https://www.instagram.com/joakimblomquistphotography/" target="_blank">Joakim Blomquist</a> tagit. Han har fångat Copain så som vi själva ser det – enkelt, varmt och med kärlek till hantverket. 
         </p>
     </section>
 
@@ -45,12 +45,13 @@
         </div>
         <div class="zigzag-text">
             <h2>Sortiment</h2>
-            <p>Vårt dagsfärska sortiment inkluderar allt från klassiska surdegsbröd och rågbröd till söta godsaker som kanelbullar och croissanter.</p>
+            <p>Vårt dagsfärska sortiment inkluderar allt från klassiska surdegsbröd och rågbröd till söta godsaker som kanelbullar och croissanter. Varje vecka publicerar vi veckans sortiment på Instagram.</p>
             <div class="inline-style-1">
                 <strong>Specialiteter:</strong><br>
                 • Surdegsbröd och frallor<br>
-                • Kanelbullar och kardemummabullar<br>
-                • Croissanter och Tebirkes (YOLO)
+                • Kanel- och kardemummabullar<br>
+                • Croissanter och Tebirkes<br>
+                • Chocolate Chip Cookies och Chokladbiskvier
             </div>
         </div>
     </section>
@@ -99,7 +100,7 @@
             </div>
             <div class="contact-item">
                 <h4>Telefon</h4>
-                <p>031-123 456</p>
+                <p>0760-210 780</p>
             </div>
             <div class="contact-item">
                 <h4>Instagram</h4>
