--- a/index_final.html
+++ b/index_final.html
@@ -110,7 +110,7 @@
             </div>
         </div>
         <div class="footer-logo-large">
-            <img src="logo_footer.png" alt="Copain Bageri Footer Logotyp" class="footer-logo-large">
+            <img src="logo_footer2.png" alt="Copain Bageri Footer Logotyp" class="footer-logo-large">
         </div>
     </footer>
 </body>
