--- a/index_final.html
+++ b/index_final.html
@@ -103,6 +103,12 @@
                 <p>0760-210 780</p>
             </div>
             <div class="contact-item">
+                <h4>Email</h4>
+                <p>
+                    <a href="mailto:copain@copainbageri.se">copain@copainbageri.se</a>
+                </p>
+            </div>
+            <div class="contact-item">
                 <h4>Instagram</h4>
                 <p>
                     <a href="https://www.instagram.com/copainbageri/" target="_blank">@copainbageri</a>
