--- a/index_final.html
+++ b/index_final.html
@@ -66,7 +66,7 @@
         </div>
         <div class="zigzag-text">
             <h2>Förbeställ</h2>
-            <p>Vi tar gärna emot förbeställningar! Kontakta oss via <a href="https://www.instagram.com/copainbageri/" target="_blank">Instagram</a> eller på <a href="mailto:copain@copainbageri.se">copain@copainbageri.se</a> så löser vi det.</p>
+            <p>Vi tar gärna emot förbeställningar! Kontakta oss via ett direktmeddelande på <a href="https://www.instagram.com/copainbageri/" target="_blank">Instagram</a> eller på <a href="mailto:copain@copainbageri.se">copain@copainbageri.se</a> så löser vi det.</p>
         </div>
     </section>
 
